[mod] traefik dashboard over https;

--- a/traefik/docker-compose.yml
+++ b/traefik/docker-compose.yml
@@ -16,7 +16,12 @@ traefik:
     - "traefik.enable=true"
     - "traefik.http.routers.${PROJECT_NAME}_proxy.entrypoints=web"
     - "traefik.http.routers.${PROJECT_NAME}_proxy.rule=Host(`${PROXY_HOST_URI}`)"
-    - "traefik.http.routers.${PROJECT_NAME}_proxy.service=api@internal"
-    - "traefik.http.routers.${PROJECT_NAME}_proxy.middlewares=auth"
-    - "traefik.http.services.${PROJECT_NAME}_proxy.loadBalancer.server.port=8080"
+    - "traefik.http.routers.${PROJECT_NAME}_proxy.middlewares=https_redirect@file"
+    - "traefik.http.routers.${PROJECT_NAME}_proxy_secure.entrypoints=webs"
+    - "traefik.http.routers.${PROJECT_NAME}_proxy_secure.rule=Host(`${PROXY_HOST_URI}`)"
+    - "traefik.http.routers.${PROJECT_NAME}_proxy_secure.service=api@internal"
+    - "traefik.http.routers.${PROJECT_NAME}_proxy_secure.middlewares=auth"
+    - "traefik.http.routers.${PROJECT_NAME}_proxy_secure.tls=true"
+    - "traefik.http.routers.${PROJECT_NAME}_proxy_secure.tls.certresolver=acme_certification"
+    - "traefik.http.services.${PROJECT_NAME}_proxy_secure.loadBalancer.server.port=8080"
     - "traefik.http.middlewares.auth.basicauth.usersfile=/etc/traefik/usersfile"
